# Gryphhacks

./: .gitignore  CMakeLists.txt  README.md  base64.h  hmac.h  jwt.h  main.cpp  settings.h  util.cpp  util.h
.circleci/: config.yml
endpoints/: auth.h  event.h  misc.h  user.h
